@@ -45,7 +45,6 @@ dependencies {
     runtimeOnly('ch.qos.logback:logback-classic') {
         exclude group: 'javax.activation'
     }
-    
     runtimeOnly 'javax.servlet:javax.servlet-api'
 }
 
@@ -57,6 +56,12 @@ javafx {
             'javafx.fxml',
             'javafx.graphics'
     ]
+}
+
+tasks.withType(JavaExec) {
+    if (System.getProperty('DEBUG', 'false') == 'true') {
+        jvmArgs '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=9099'
+    }
 }
 
 /* *****************************************************************************
@@ -72,7 +77,8 @@ def runtimeJvmArgs = [
         '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=com.jfoenix',
         '--add-exports', 'javafx.base/com.sun.javafx.binding=com.jfoenix',
         '--add-exports', 'javafx.graphics/com.sun.javafx.stage=com.jfoenix',
-        '--add-exports', 'javafx.base/com.sun.javafx.event=com.jfoenix'
+        '--add-exports', 'javafx.base/com.sun.javafx.event=com.jfoenix',
+        '--add-reads', 'vars.annotation.merged.module=org.slf4j'
 ]
 
 // If any o these exist as enironment vairables add them as -Dkey=value to jvmArgs
